// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Primary 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-bmwa83 css-1m9ye6z css-1kvjnyw topdone-button"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Primary Large 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-bmwa83 css-ohzjfp css-1kvjnyw topdone-button"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Primary Small 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-bmwa83 css-mx5r2x css-1kvjnyw topdone-button"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-bmwa83 css-1m9ye6z css-b2xhwt topdone-button"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary Large 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-bmwa83 css-ohzjfp css-b2xhwt topdone-button"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary Small 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-bmwa83 css-mx5r2x css-b2xhwt topdone-button"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Icons Icons 1`] = `
Array [
  <GlobalStyles />,
  <h1>
    Icons
  </h1>,
  <div
    className="css-sn1p36"
  >
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="css-1k3qhan"
              d="M19 13H13V19H11V13H5V11H11V5H13V11H19V13Z"
              fill="black"
            />
          </svg>
        </div>
      </div>
      IconAdd
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_10)"
            >
              <path
                className="css-1k3qhan"
                d="M19 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM17 13H13V17H11V13H7V11H11V7H13V11H17V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_10"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconAddBox
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_13)"
            >
              <path
                className="css-1k3qhan"
                d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM17 13H13V17H11V13H7V11H11V7H13V11H17V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_13"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconAddCircle
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_16)"
            >
              <path
                className="css-1k3qhan"
                d="M13 7H11V11H7V13H11V17H13V13H17V11H13V7ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_16"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconAddCircleOutline
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_19)"
            >
              <path
                className="css-1k3qhan"
                d="M8 11H16V13H8V11ZM20.1 12H22C22 9.24 19.76 7 17 7H13V8.9H17C18.71 8.9 20.1 10.29 20.1 12ZM3.9 12C3.9 10.29 5.29 8.9 7 8.9H11V7H7C4.24 7 2 9.24 2 12C2 14.76 4.24 17 7 17H11V15.1H7C5.29 15.1 3.9 13.71 3.9 12ZM19 12H17V15H14V17H17V20H19V17H22V15H19V12Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_19"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconAddLink
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_22)"
            >
              <path
                className="css-1k3qhan"
                d="M17 4H7V19H17V4Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M5 6H3V17H5V6Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M21 6H19V17H21V6Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_22"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconAmpStories
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_30)"
            >
              <path
                className="css-1k3qhan"
                d="M20.54 5.23L19.15 3.55C18.88 3.21 18.47 3 18 3H6C5.53 3 5.12 3.21 4.84 3.55L3.46 5.23C3.17 5.57 3 6.02 3 6.5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V6.5C21 6.02 20.83 5.57 20.54 5.23ZM12 17.5L6.5 12H10V10H14V12H17.5L12 17.5ZM5.12 5L5.93 4H17.93L18.87 5H5.12Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_30"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconArticle
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_33)"
            >
              <path
                className="css-1k3qhan"
                d="M22 3H7C6.31 3 5.77 3.35 5.41 3.88L0 12L5.41 20.11C5.77 20.64 6.31 21 7 21H22C23.1 21 24 20.1 24 19V5C24 3.9 23.1 3 22 3ZM19 15.59L17.59 17L14 13.41L10.41 17L9 15.59L12.59 12L9 8.41L10.41 7L14 10.59L17.59 7L19 8.41L15.41 12L19 15.59Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_33"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconBackSpace
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_36)"
            >
              <path
                className="css-1k3qhan"
                clip-rule="evenodd"
                d="M13 9.5H18V7.5H13V9.5ZM13 16.5H18V14.5H13V16.5ZM19 21H5C3.9 21 3 20.1 3 19V5C3 3.9 3.9 3 5 3H19C20.1 3 21 3.9 21 5V19C21 20.1 20.1 21 19 21ZM6 11H11V6H6V11ZM7 7H10V10H7V7ZM6 18H11V13H6V18ZM7 14H10V17H7V14Z"
                fill="black"
                fill-rule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_36"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconBallot
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_39)"
            >
              <path
                className="css-1k3qhan"
                d="M7 18.9999C5.9 18.9999 5 19.8999 5 20.9999H19C19 19.8999 18.1 18.9999 17 18.9999H13V16.9999H16C17.1 16.9999 18 16.0999 18 14.9999H10C8.34 14.9999 7 13.6599 7 11.9999C7 10.9099 7.59 9.95988 8.46 9.43988C8.17 9.02988 8 8.53988 8 7.99988C8 7.78988 8.04 7.57988 8.09 7.37988C6.28 8.12988 5 9.91988 5 11.9999C5 14.7599 7.24 16.9999 10 16.9999V18.9999H7Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M10.56 5.51C11.91 5.54 13 6.64 13 8C13 8.75 12.67 9.41 12.15 9.87L12.74 11.49L13.68 11.15L14.02 12.09L15.9 11.41L15.56 10.47L16.5 10.13L13.76 2.6L12.82 2.94L12.48 2L10.6 2.68L10.94 3.62L10 3.97L10.56 5.51Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M10.5 9.5C11.3284 9.5 12 8.82843 12 8C12 7.17157 11.3284 6.5 10.5 6.5C9.67157 6.5 9 7.17157 9 8C9 8.82843 9.67157 9.5 10.5 9.5Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_39"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconBiotech
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_47)"
            >
              <path
                className="css-1k3qhan"
                d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM4 12C4 7.58 7.58 4 12 4C13.85 4 15.55 4.63 16.9 5.69L5.69 16.9C4.63 15.55 4 13.85 4 12ZM12 20C10.15 20 8.45 19.37 7.1 18.31L18.31 7.1C19.37 8.45 20 10.15 20 12C20 16.42 16.42 20 12 20Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_47"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconBlock
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_50)"
            >
              <path
                className="css-1k3qhan"
                d="M22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12ZM5.7 7.1L16.9 18.3C15.6 19.4 13.9 20 12 20C7.6 20 4 16.4 4 12C4 10.1 4.6 8.4 5.7 7.1ZM20 12C20 13.9 19.4 15.6 18.3 16.9L7.1 5.7C8.4 4.6 10.1 4 12 4C16.4 4 20 7.6 20 12Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_50"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconBlockFlipped
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="css-1k3qhan"
              d="M11 21H9.99999L11 14H7.49999C6.91999 14 6.92999 13.68 7.11999 13.34C7.30999 13 7.16999 13.26 7.18999 13.22C8.47999 10.94 10.42 7.54 13 3H14L13 10H16.5C16.99 10 17.06 10.33 16.97 10.51L16.9 10.66C12.96 17.55 11 21 11 21Z"
              fill="black"
            />
          </svg>
        </div>
      </div>
      IconBolt
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_57)"
            >
              <path
                className="css-1k3qhan"
                d="M19 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM13.03 7.06L14.09 6L15.5 7.41L16.91 6L17.97 7.06L16.56 8.47L17.97 9.88L16.91 10.94L15.5 9.54L14.09 10.95L13.03 9.89L14.44 8.48L13.03 7.06ZM6.25 7.72H11.25V9.22H6.25V7.72ZM11.5 16H9.5V18H8V16H6V14.5H8V12.5H9.5V14.5H11.5V16ZM18 17.25H13V15.75H18V17.25ZM18 14.75H13V13.25H18V14.75Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_57"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconCalculate
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_62)"
            >
              <path
                className="css-1k3qhan"
                d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_62"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconClear
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_65)"
            >
              <path
                className="css-1k3qhan"
                d="M16 1H4C2.9 1 2 1.9 2 3V17H4V3H16V1ZM19 5H8C6.9 5 6 5.9 6 7V21C6 22.1 6.9 23 8 23H19C20.1 23 21 22.1 21 21V7C21 5.9 20.1 5 19 5ZM19 21H8V7H19V21Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_65"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconContentCopy
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_68)"
            >
              <path
                className="css-1k3qhan"
                d="M9.64 7.64C9.87 7.14 10 6.59 10 6C10 3.79 8.21 2 6 2C3.79 2 2 3.79 2 6C2 8.21 3.79 10 6 10C6.59 10 7.14 9.87 7.64 9.64L10 12L7.64 14.36C7.14 14.13 6.59 14 6 14C3.79 14 2 15.79 2 18C2 20.21 3.79 22 6 22C8.21 22 10 20.21 10 18C10 17.41 9.87 16.86 9.64 16.36L12 14L19 21H22V20L9.64 7.64ZM6 8C4.9 8 4 7.11 4 6C4 4.89 4.9 4 6 4C7.1 4 8 4.89 8 6C8 7.11 7.1 8 6 8ZM6 20C4.9 20 4 19.11 4 18C4 16.89 4.9 16 6 16C7.1 16 8 16.89 8 18C8 19.11 7.1 20 6 20ZM12 12.5C11.72 12.5 11.5 12.28 11.5 12C11.5 11.72 11.72 11.5 12 11.5C12.28 11.5 12.5 11.72 12.5 12C12.5 12.28 12.28 12.5 12 12.5ZM19 3L13 9L15 11L22 4V3H19Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_68"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconContentCut
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_74)"
            >
              <path
                className="css-1k3qhan"
                d="M19 2H14.82C14.4 0.84 13.3 0 12 0C10.7 0 9.6 0.84 9.18 2H5C3.9 2 3 2.9 3 4V20C3 21.1 3.9 22 5 22H19C20.1 22 21 21.1 21 20V4C21 2.9 20.1 2 19 2ZM12 2C12.55 2 13 2.45 13 3C13 3.55 12.55 4 12 4C11.45 4 11 3.55 11 3C11 2.45 11.45 2 12 2ZM19 20H5V4H7V7H17V4H19V20Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_74"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconContentPaste
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_77)"
            >
              <path
                className="css-1k3qhan"
                d="M3 17.2501V21.0001H6.75L17.81 9.94006L14.06 6.19006L3 17.2501ZM20.71 7.04006C21.1 6.65006 21.1 6.02006 20.71 5.63006L18.37 3.29006C17.98 2.90006 17.35 2.90006 16.96 3.29006L15.13 5.12006L18.88 8.87006L20.71 7.04006Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_77"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconCreate
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_80)"
            >
              <path
                className="css-1k3qhan"
                d="M15 16H19V18H15V16ZM15 8H22V10H15V8ZM15 12H21V14H15V12ZM3 18C3 19.1 3.9 20 5 20H11C12.1 20 13 19.1 13 18V8H3V18ZM14 5H11L10 4H6L5 5H2V7H14V5Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_80"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconDeleteSweep
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_83)"
            >
              <path
                className="css-1k3qhan"
                d="M21.99 8C21.99 7.28 21.62 6.65 21.05 6.3L12 1L2.95 6.3C2.38 6.65 2 7.28 2 8V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18L21.99 8ZM12 13L3.74 7.84L12 3L20.26 7.84L12 13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_83"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconDrafts
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_86)"
            >
              <path
                className="css-1k3qhan"
                d="M8 8H6V15C6 16.1 6.9 17 8 17H17V15H8V8Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M20 3H12C10.9 3 10 3.9 10 5V11C10 12.1 10.9 13 12 13H20C21.1 13 22 12.1 22 11V5C22 3.9 21.1 3 20 3ZM20 11H12V7H20V11Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M4 12H2V19C2 20.1 2.9 21 4 21H13V19H4V12Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_86"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconDynamicFeed
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_99)"
            >
              <path
                className="css-1k3qhan"
                d="M16 1H4C2.9 1 2 1.9 2 3V17H4V3H16V1ZM15 5L21 11V21C21 22.1 20.1 23 19 23H7.99C6.89 23 6 22.1 6 21L6.01 7C6.01 5.9 6.9 5 8 5H15ZM14 12H19.5L14 6.5V12Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_99"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconFileCopy
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_102)"
            >
              <path
                className="css-1k3qhan"
                d="M10 18H14V16H10V18ZM3 6V8H21V6H3ZM6 13H18V11H6V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_102"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconFilterList
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_105)"
            >
              <path
                className="css-1k3qhan"
                d="M14.4 6L14 4H5V21H7V14H12.6L13 16H20V6H14.4Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_105"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconFlag
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_108)"
            >
              <path
                className="css-1k3qhan"
                d="M9.93 13.5H14.07L12 7.98L9.93 13.5ZM20 2H4C2.9 2 2 2.9 2 4V20C2 21.1 2.9 22 4 22H20C21.1 22 22 21.1 22 20V4C22 2.9 21.1 2 20 2ZM15.95 18.5L14.81 15.5H9.17L8.05 18.5H5.96L11.07 5.5H12.93L18.04 18.5H15.95Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_108"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconFontDownload
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_111)"
            >
              <path
                className="css-1k3qhan"
                d="M12 8V4L20 12L12 20V16H4V8H12Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_111"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconForward
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_114)"
            >
              <path
                className="css-1k3qhan"
                d="M4.59003 6.89C5.29003 6.18 5.99003 5.54 6.30003 5.67C6.80003 5.87 6.30003 6.7 6.00003 7.19C5.75003 7.61 3.14003 11.08 3.14003 13.5C3.14003 14.78 3.62003 15.84 4.48003 16.48C5.23003 17.04 6.22003 17.21 7.12003 16.94C8.19003 16.63 9.07003 15.54 10.18 14.17C11.39 12.68 13.01 10.73 14.26 10.73C15.89 10.73 15.91 11.74 16.02 12.52C12.24 13.16 10.64 16.19 10.64 17.89C10.64 19.59 12.08 20.98 13.85 20.98C15.48 20.98 18.14 19.65 18.54 14.88H21V12.38H18.53C18.38 10.73 17.44 8.18 14.5 8.18C12.25 8.18 10.32 10.09 9.56003 11.02C8.98003 11.75 7.50003 13.5 7.27003 13.74C7.02003 14.04 6.59003 14.58 6.16003 14.58C5.71003 14.58 5.44003 13.75 5.80003 12.66C6.15003 11.57 7.20003 9.8 7.65003 9.14C8.43003 8 8.95003 7.22 8.95003 5.86C8.95003 3.69 7.31003 3 6.44003 3C5.12003 3 3.97003 4 3.72003 4.25C3.36003 4.61 3.06003 4.91 2.84003 5.18L4.59003 6.89ZM13.88 18.55C13.57 18.55 13.14 18.29 13.14 17.83C13.14 17.23 13.87 15.63 16.01 15.07C15.71 17.76 14.58 18.55 13.88 18.55Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_114"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconGesture
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_117)"
            >
              <path
                className="css-1k3qhan"
                clip-rule="evenodd"
                d="M9 17L12 14.06C11.61 14.02 11.32 14 11 14C8.33 14 3 15.34 3 18V20H12L9 17ZM11 12C13.21 12 15 10.21 15 8C15 5.79 13.21 4 11 4C8.79 4 7 5.79 7 8C7 10.21 8.79 12 11 12Z"
                fill="black"
                fill-rule="evenodd"
              />
              <path
                className="css-1k3qhan"
                clip-rule="evenodd"
                d="M15.47 20.5L12 17L13.4 15.59L15.47 17.67L20.6 12.5L22 13.91L15.47 20.5Z"
                fill="black"
                fill-rule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_117"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconHowToReg
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_122)"
            >
              <path
                className="css-1k3qhan"
                d="M18 13H17.32L15.32 15H17.23L19 17H5L6.78 15H8.83L6.83 13H6L3 16V20C3 21.1 3.89 22 4.99 22H19C20.1 22 21 21.11 21 20V16L18 13ZM17 7.95004L12.05 12.9L8.51 9.36004L13.46 4.41004L17 7.95004ZM12.76 2.29004L6.39 8.66004C6 9.05004 6 9.68004 6.39 10.07L11.34 15.02C11.73 15.41 12.36 15.41 12.75 15.02L19.11 8.66004C19.5 8.27004 19.5 7.64004 19.11 7.25004L14.16 2.30004C13.78 1.90004 13.15 1.90004 12.76 2.29004Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_122"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconHowToVote
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_125)"
            >
              <path
                className="css-1k3qhan"
                d="M19 3H4.99C3.88 3 3.01 3.89 3.01 5L3 19C3 20.1 3.88 21 4.99 21H19C20.1 21 21 20.1 21 19V5C21 3.89 20.1 3 19 3ZM19 15H15C15 16.66 13.65 18 12 18C10.35 18 9 16.66 9 15H4.99V5H19V15Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_125"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconInbox
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_128)"
            >
              <path
                className="css-1k3qhan"
                d="M21 8C19.55 8 18.74 9.44 19.07 10.51L15.52 14.07C15.22 13.98 14.78 13.98 14.48 14.07L11.93 11.52C12.27 10.45 11.46 9 10 9C8.55 9 7.73 10.44 8.07 11.52L3.51 16.07C2.44 15.74 1 16.55 1 18C1 19.1 1.9 20 3 20C4.45 20 5.26 18.56 4.93 17.49L9.48 12.93C9.78 13.02 10.22 13.02 10.52 12.93L13.07 15.48C12.73 16.55 13.54 18 15 18C16.45 18 17.27 16.56 16.93 15.48L20.49 11.93C21.56 12.26 23 11.45 23 10C23 8.9 22.1 8 21 8Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M15 9L15.94 6.93L18 6L15.94 5.07L15 3L14.08 5.07L12 6L14.08 6.93L15 9Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M3.5 11L4 9L6 8.5L4 8L3.5 6L3 8L1 8.5L3 9L3.5 11Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_128"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconInsights
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_136)"
            >
              <path
                className="css-1k3qhan"
                d="M20 2H4C3 2 2 2.9 2 4V7.01C2 7.73 2.43 8.35 3 8.7V20C3 21.1 4.1 22 5 22H19C19.9 22 21 21.1 21 20V8.7C21.57 8.35 22 7.73 22 7.01V4C22 2.9 21 2 20 2ZM15 14H9V12H15V14ZM20 7H4V4L20 3.98V7Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_136"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconInventory
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_139)"
            >
              <path
                className="css-1k3qhan"
                d="M3.9 12C3.9 10.29 5.29 8.9 7 8.9H11V7H7C4.24 7 2 9.24 2 12C2 14.76 4.24 17 7 17H11V15.1H7C5.29 15.1 3.9 13.71 3.9 12ZM8 13H16V11H8V13ZM17 7H13V8.9H17C18.71 8.9 20.1 10.29 20.1 12C20.1 13.71 18.71 15.1 17 15.1H13V17H17C19.76 17 22 14.76 22 12C22 9.24 19.76 7 17 7Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_139"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconLink
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_142)"
            >
              <path
                className="css-1k3qhan"
                d="M17 7H13V8.9H17C18.71 8.9 20.1 10.29 20.1 12C20.1 13.43 19.12 14.63 17.79 14.98L19.25 16.44C20.88 15.61 22 13.95 22 12C22 9.24 19.76 7 17 7ZM16 11H13.81L15.81 13H16V11ZM2 4.27L5.11 7.38C3.29 8.12 2 9.91 2 12C2 14.76 4.24 17 7 17H11V15.1H7C5.29 15.1 3.9 13.71 3.9 12C3.9 10.41 5.11 9.1 6.66 8.93L8.73 11H8V13H10.73L13 15.27V17H14.73L18.74 21L20 19.74L3.27 3L2 4.27Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_142"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconLinkOff
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_146)"
            >
              <path
                className="css-1k3qhan"
                d="M14 5H22V7H14V5ZM14 10.5H22V12.5H14V10.5ZM14 16H22V18H14V16ZM2 11.5C2 15.08 4.92 18 8.5 18H9V20L12 17L9 14V16H8.5C6.02 16 4 13.98 4 11.5C4 9.02 6.02 7 8.5 7H12V5H8.5C4.92 5 2 7.92 2 11.5Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_146"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconLowPriority
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_149)"
            >
              <path
                className="css-1k3qhan"
                d="M20 4H4C2.9 4 2.01 4.9 2.01 6L2 18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6C22 4.9 21.1 4 20 4ZM20 8L12 13L4 8V6L12 11L20 6V8Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_149"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconMail
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_152)"
            >
              <path
                className="css-1k3qhan"
                d="M20 4H4C2.9 4 2.01 4.9 2.01 6L2 18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6C22 4.9 21.1 4 20 4ZM20 8L12 13L4 8V6L12 11L20 6V8Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_152"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconMarkUnread
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_155)"
            >
              <path
                className="css-1k3qhan"
                d="M19 3H4.99C3.88 3 3.01 3.9 3.01 5L3 19C3 20.1 3.88 21 4.99 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM19 15H15C15 16.66 13.65 18 12 18C10.35 18 9 16.66 9 15H4.99V5H19V15ZM16 10H14V7H10V10H8L12 14L16 10Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_155"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconMoveToInbox
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_158)"
            >
              <path
                className="css-1k3qhan"
                d="M20 7H16V5C16 4.45 15.78 3.95 15.41 3.59C15.05 3.22 14.55 3 14 3H10C8.9 3 8 3.9 8 5V7H4C2.9 7 2 7.9 2 9V20C2 21.1 2.9 22 4 22H20C21.1 22 22 21.1 22 20V9C22 7.9 21.1 7 20 7ZM10 5H14V7H10V5ZM11 18.5L10 17.5L13 14.5L10 11.5L11 10.5L15 14.5L11 18.5Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_158"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconNextWeek
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_165)"
            >
              <path
                className="css-1k3qhan"
                d="M14 6L13 4H5V21H7V14H12L13 16H20V6H14ZM18 14H14L13 12H7V6H12L13 8H18V14Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_165"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconOutlinedFlag
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_168)"
            >
              <path
                className="css-1k3qhan"
                d="M21 5L12 1L3 5V11C3 16.55 6.84 21.74 12 23C14.3 22.44 16.33 21.1 17.88 19.29L14.76 16.17C12.82 17.46 10.18 17.24 8.47 15.53C6.52 13.58 6.52 10.41 8.47 8.46C10.42 6.51 13.59 6.51 15.54 8.46C17.25 10.17 17.46 12.81 16.18 14.75L19.08 17.65C20.29 15.69 21 13.38 21 11V5Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_168"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconPolicy
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_175)"
            >
              <path
                className="css-1k3qhan"
                clip-rule="evenodd"
                d="M16 9V4H17C17.55 4 18 3.55 18 3C18 2.45 17.55 2 17 2H7C6.45 2 6 2.45 6 3C6 3.55 6.45 4 7 4H8V9C8 10.66 6.66 12 5 12V14H10.97V21L11.97 22L12.97 21V14H19V12C17.34 12 16 10.66 16 9Z"
                fill="black"
                fill-rule="evenodd"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_175"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconPushPin
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_180)"
            >
              <path
                className="css-1k3qhan"
                d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8C6.85004 8 2.92004 11.03 1.54004 15.22L3.90004 16C4.95004 12.81 7.95004 10.5 11.5 10.5C13.45 10.5 15.23 11.22 16.62 12.38L13 16H22V7L18.4 10.6Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_180"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconRedo
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_183)"
            >
              <path
                className="css-1k3qhan"
                d="M19 13H5V11H19V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_183"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconRemove
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_186)"
            >
              <path
                className="css-1k3qhan"
                d="M12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM17 13H7V11H17V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_186"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconRemoveCircle
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_189)"
            >
              <path
                className="css-1k3qhan"
                d="M7 11V13H17V11H7ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_189"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconRemoveCircleOutline
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_192)"
            >
              <path
                className="css-1k3qhan"
                d="M10 9V5L3 12L10 19V14.9C15 14.9 18.5 16.5 21 20C20 15 17 10 10 9Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_192"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconReply
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_195)"
            >
              <path
                className="css-1k3qhan"
                d="M7 8V5L0 12L7 19V16L3 12L7 8ZM13 9V5L6 12L13 19V14.9C18 14.9 21.5 16.5 24 20C23 15 20 10 13 9Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_195"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconReplyAll
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_198)"
            >
              <path
                className="css-1k3qhan"
                d="M15.73 3H8.27L3 8.27V15.73L8.27 21H15.73L21 15.73V8.27L15.73 3ZM12 17.3C11.28 17.3 10.7 16.72 10.7 16C10.7 15.28 11.28 14.7 12 14.7C12.72 14.7 13.3 15.28 13.3 16C13.3 16.72 12.72 17.3 12 17.3ZM13 13H11V7H13V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_198"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconReport
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_201)"
            >
              <path
                className="css-1k3qhan"
                d="M11 6.99997H13V9.91997L19.91 16.83L21 15.73V8.26997L15.73 2.99997H8.27L7.18 4.09997L11 7.91997V6.99997ZM22.27 21.73L2.27 1.71997L1 2.98997L4.64 6.62997L3 8.26997V15.73L8.27 21H15.73L17.37 19.37L21 23L22.27 21.73ZM12 17.3C11.28 17.3 10.7 16.72 10.7 16C10.7 15.28 11.28 14.7 12 14.7C12.72 14.7 13.3 15.28 13.3 16C13.3 16.72 12.72 17.3 12 17.3Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_201"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconReportOff
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_204)"
            >
              <path
                className="css-1k3qhan"
                d="M17 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.89 21 5 21H19C20.1 21 21 20.1 21 19V7L17 3ZM12 19C10.34 19 9 17.66 9 16C9 14.34 10.34 13 12 13C13.66 13 15 14.34 15 16C15 17.66 13.66 19 12 19ZM15 9H5V5H15V9Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_204"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconSave
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_207)"
            >
              <path
                className="css-1k3qhan"
                d="M19 12V19H5V12H3V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V12H19ZM13 12.67L15.59 10.09L17 11.5L12 16.5L7 11.5L8.41 10.09L11 12.67V3H13V12.67Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_207"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconSaveAlt
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_210)"
            >
              <path
                className="css-1k3qhan"
                d="M3 5H5V3C3.9 3 3 3.9 3 5ZM3 13H5V11H3V13ZM7 21H9V19H7V21ZM3 9H5V7H3V9ZM13 3H11V5H13V3ZM19 3V5H21C21 3.9 20.1 3 19 3ZM5 21V19H3C3 20.1 3.9 21 5 21ZM3 17H5V15H3V17ZM9 3H7V5H9V3ZM11 21H13V19H11V21ZM19 13H21V11H19V13ZM19 21C20.1 21 21 20.1 21 19H19V21ZM19 9H21V7H19V9ZM19 17H21V15H19V17ZM15 21H17V19H15V21ZM15 5H17V3H15V5ZM7 17H17V7H7V17ZM9 9H15V15H9V9Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_210"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconSelectAll
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_213)"
            >
              <path
                className="css-1k3qhan"
                d="M2.01 21L23 12L2.01 3L2 10L17 12L2 14L2.01 21Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_213"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconSend
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_216)"
            >
              <path
                className="css-1k3qhan"
                d="M12 1L3 5V11C3 16.55 6.84 21.74 12 23C17.16 21.74 21 16.55 21 11V5L12 1Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_216"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconShield
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_219)"
            >
              <path
                className="css-1k3qhan"
                d="M3 18H9V16H3V18ZM3 6V8H21V6H3ZM3 13H15V11H3V13Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_219"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconSort
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_222)"
            >
              <path
                className="css-1k3qhan"
                d="M17.66 17.66L16.6 18.72L15.89 18.01L16.95 16.95L15.01 15.01L13.95 16.07L13.24 15.36L14.3 14.3L12.36 12.36L11.3 13.42L10.59 12.71L11.65 11.65L9.7 9.7L8.64 10.76L7.93 10.05L8.99 8.99L7.05 7.05L5.99 8.11L5.28 7.4L6.34 6.34L4 4V18C4 19.1 4.9 20 6 20H20L17.66 17.66ZM7 17V11.24L12.76 17H7Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_222"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconSquareFoot
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_228)"
            >
              <path
                className="css-1k3qhan"
                d="M6 10H9V20H6V10ZM6 5H9V9H6V5ZM16 16H19V20H16V16ZM16 13H19V15H16V13ZM11 13H14V20H11V13ZM11 9H14V12H11V9Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_228"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconStackedBarChart
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_231)"
            >
              <path
                className="css-1k3qhan"
                d="M20 14C21.1046 14 22 13.1046 22 12C22 10.8954 21.1046 10 20 10C18.8954 10 18 10.8954 18 12C18 13.1046 18.8954 14 20 14Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M4 14C5.10457 14 6 13.1046 6 12C6 10.8954 5.10457 10 4 10C2.89543 10 2 10.8954 2 12C2 13.1046 2.89543 14 4 14Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M12 22C13.1046 22 14 21.1046 14 20C14 18.8954 13.1046 18 12 18C10.8954 18 10 18.8954 10 20C10 21.1046 10.8954 22 12 22Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M10.05 8.58998L6.02999 4.54998H6.01999L5.70999 4.22998L4.28999 5.63998L8.30999 9.68998L8.31999 9.67998L8.62999 9.99998L10.05 8.58998ZM13.943 8.61698L18.348 4.22498L19.76 5.63998L15.355 10.033L13.943 8.61698ZM10.01 15.36L8.58999 13.95L4.55999 17.96L4.23999 18.29L5.64999 19.7L9.67999 15.68L10.01 15.36ZM19.76 18.3L15.77 14.29L15.41 13.94L14 15.35L17.99 19.36L18.34 19.71L19.76 18.3Z"
                fill="black"
              />
              <path
                className="css-1k3qhan"
                d="M12 6C13.1046 6 14 5.10457 14 4C14 2.89543 13.1046 2 12 2C10.8954 2 10 2.89543 10 4C10 5.10457 10.8954 6 12 6Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_231"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconStream
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="css-1k3qhan"
              d="M20 10V8H16V4H14V8H10V4H8V8H4V10H8V14H4V16H8V20H10V16H14V20H16V16H20V14H16V10H20ZM14 14H10V10H14V14Z"
              fill="black"
            />
          </svg>
        </div>
      </div>
      IconTag
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_240)"
            >
              <path
                className="css-1k3qhan"
                d="M5 17V19H19V17H5ZM9.5 12.8H14.5L15.4 15H17.5L12.75 4H11.25L6.5 15H8.6L9.5 12.8ZM12 5.98L13.87 11H10.13L12 5.98Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_240"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconTextFormat
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_250)"
            >
              <path
                className="css-1k3qhan"
                d="M12.5 8C9.85 8 7.45 8.99 5.6 10.6L2 7V16H11L7.38 12.38C8.77 11.22 10.54 10.5 12.5 10.5C16.04 10.5 19.05 12.81 20.1 16L22.47 15.22C21.08 11.03 17.15 8 12.5 8Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_250"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconUndo
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              className="css-1k3qhan"
              d="M17 16.99C15.65 16.99 14.8 17.41 14.05 17.79C13.4 18.12 12.87 18.39 12 18.39C11.1 18.39 10.6 18.14 9.95 17.79C9.2 17.41 8.38 16.99 7 16.99C5.62 16.99 4.8 17.41 4.05 17.79C3.4 18.12 2.88 18.39 2 18.39V20.34C3.35 20.34 4.2 19.92 4.95 19.54C5.6 19.21 6.12 18.94 7 18.94C7.88 18.94 8.4 19.19 9.05 19.54C9.8 19.92 10.62 20.34 12 20.34C13.38 20.34 14.2 19.92 14.95 19.54C15.6 19.21 16.13 18.94 17 18.94C17.9 18.94 18.4 19.19 19.05 19.54C19.8 19.92 20.63 20.34 22 20.34V18.39C21.1 18.39 20.6 18.14 19.95 17.79C19.2 17.41 18.35 16.99 17 16.99ZM17 12.54C15.65 12.54 14.8 12.97 14.05 13.34C13.4 13.66 12.87 13.94 12 13.94C11.1 13.94 10.6 13.69 9.95 13.34C9.2 12.96 8.38 12.54 7 12.54C5.62 12.54 4.8 12.97 4.05 13.34C3.4 13.66 2.88 13.94 2 13.94V15.89C3.35 15.89 4.2 15.46 4.95 15.09C5.6 14.74 6.1 14.49 7 14.49C7.9 14.49 8.4 14.74 9.05 15.09C9.8 15.47 10.62 15.89 12 15.89C13.38 15.89 14.2 15.46 14.95 15.09C15.6 14.74 16.1 14.49 17 14.49C17.9 14.49 18.4 14.74 19.05 15.09C19.8 15.47 20.63 15.89 22 15.89V13.94C21.1 13.94 20.6 13.69 19.95 13.34C19.2 12.96 18.35 12.54 17 12.54ZM19.95 4.46003C19.2 4.08003 18.37 3.66003 17 3.66003C15.63 3.66003 14.8 4.08003 14.05 4.46003C13.4 4.78003 12.87 5.06003 12 5.06003C11.1 5.06003 10.6 4.81003 9.95 4.46003C9.2 4.09003 8.38 3.66003 7 3.66003C5.62 3.66003 4.8 4.08003 4.05 4.46003C3.4 4.79003 2.88 5.06003 2 5.06003V6.99003C3.35 6.99003 4.2 6.56003 4.95 6.19003C5.6 5.86003 6.12 5.59003 7 5.59003C7.88 5.59003 8.4 5.84003 9.05 6.19003C9.8 6.57003 10.62 6.99003 12 6.99003C13.38 6.99003 14.2 6.56003 14.95 6.19003C15.6 5.87003 16.13 5.59003 17 5.59003C17.9 5.59003 18.4 5.84003 19.05 6.19003C19.8 6.57003 20.63 6.99003 22 6.99003V5.04003C21.1 5.04003 20.6 4.79003 19.95 4.46003ZM17 8.09003C15.65 8.09003 14.8 8.52003 14.05 8.89003C13.4 9.24003 12.9 9.49003 12 9.49003C11.1 9.49003 10.6 9.24003 9.95 8.89003C9.2 8.51003 8.38 8.09003 7 8.09003C5.62 8.09003 4.8 8.52003 4.05 8.89003C3.4 9.24003 2.9 9.49003 2 9.49003V11.44C3.35 11.44 4.2 11.01 4.95 10.64C5.6 10.32 6.13 10.04 7 10.04C7.87 10.04 8.4 10.29 9.05 10.64C9.8 11.02 10.62 11.44 12 11.44C13.38 11.44 14.2 11.01 14.95 10.64C15.6 10.32 16.13 10.04 17 10.04C17.9 10.04 18.4 10.29 19.05 10.64C19.8 11.02 20.63 11.44 22 11.44V9.49003C21.1 9.49003 20.6 9.24003 19.95 8.89003C19.2 8.51003 18.35 8.09003 17 8.09003Z"
              fill="black"
            />
          </svg>
        </div>
      </div>
      IconWaves
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_255)"
            >
              <path
                className="css-1k3qhan"
                d="M21 10C19.9 10 19 10.9 19 12V15H5V12C5 10.9 4.11 10 3 10C1.89 10 1 10.9 1 12V17C1 18.1 1.9 19 3 19H21C22.1 19 23 18.1 23 17V12C23 10.9 22.1 10 21 10ZM18 5H6C4.9 5 4 5.9 4 7V9.15C5.16 9.56 6 10.67 6 11.96V14H18V11.97C18 10.67 18.84 9.57 20 9.16V7C20 5.9 19.1 5 18 5Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_255"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconWeekend
    </div>
    <div
      className="iconInfo"
    >
      <div
        className="iconContainer"
      >
        <div
          className="css-er859s topdone-icon"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#clip0_433_259)"
            >
              <path
                className="css-1k3qhan"
                d="M12 2C15.86 2 19 5.14 19 9C19 14.25 12 22 12 22C12 22 5 14.25 5 9C5 5.14 8.14 2 12 2ZM10.47 14L17 7.41L15.6 6L10.47 11.18L8.4 9.09L7 10.5L10.47 14Z"
                fill="black"
              />
            </g>
            <defs>
              <clipPath
                id="clip0_433_259"
              >
                <rect
                  fill="white"
                  height="24"
                  width="24"
                />
              </clipPath>
            </defs>
          </svg>
        </div>
      </div>
      IconWhereToVote
    </div>
  </div>,
]
`;

exports[`Storyshots Design tokens/Colors Colors 1`] = `
Array [
  <GlobalStyles />,
  <h1>
    Design tokens colors
  </h1>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      white
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-1t4nbyx"
      >
        white
        <br />
        #ffffff
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      black
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-29nkp5"
      >
        black
        <br />
        #000000
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-50
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-fgx155"
      >
        purple-50
        <br />
        #f5e6fc
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-100
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-1jmvb5w"
      >
        purple-100
        <br />
        #e6bff9
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-200
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-26eyra"
      >
        purple-200
        <br />
        #d694f6
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-300
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-t3uqvh"
      >
        purple-300
        <br />
        #c566f3
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-400
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-jlt6u4"
      >
        purple-400
        <br />
        #b73ef0
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-500
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-bboz2p"
      >
        purple-500
        <br />
        #A800EB
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-600
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-dajvep"
      >
        purple-600
        <br />
        #9607e5
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-700
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-1l9nxfi"
      >
        purple-700
        <br />
        #7c0ade
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-800
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-om609x"
      >
        purple-800
        <br />
        #630bd9
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-900
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-19besuv"
      >
        purple-900
        <br />
        #150dd2
      </span>
    </div>
  </div>,
]
`;
